<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.khairo.windowmanagerwithfodablescreen.ui.MainViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_23sdp"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:layout_marginStart="@dimen/_16sdp"
                android:src="@drawable/ic_circle_user"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_7sdp"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/profile_image"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/app_name" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/categories_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/dark_blue"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/item_recycler"
            app:layout_constraintHorizontal_weight="15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bar">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/category_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_20sdp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/categories"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/categories_recycler"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/category_title"
                tools:listitem="@layout/category_item" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/item_recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/gray"
            android:orientation="vertical"
            android:paddingTop="@dimen/_5sdp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cart_view"
            app:layout_constraintHorizontal_weight="40"
            app:layout_constraintStart_toEndOf="@id/categories_view"
            app:layout_constraintTop_toBottomOf="@id/bar"
            app:spanCount="4"
            tools:listitem="@layout/items_item" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cart_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/weird_blue"
            app:layout_constraintHorizontal_weight="45"
            app:layout_constraintTop_toBottomOf="@id/bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/item_recycler"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cart_recycler"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:paddingTop="@dimen/_8sdp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toTopOf="@+id/discount_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/cart_item" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/discount_view"
                android:layout_width="0dp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@color/dark_blue"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:layout_constraintBottom_toTopOf="@+id/bill_view"
                app:layout_constraintEnd_toEndOf="@id/pay"
                app:layout_constraintStart_toStartOf="@id/clear_cart"
                app:layout_constraintTop_toBottomOf="@+id/cart_recycler">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:text="@string/subtotal"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_6ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:text="@string/total_discount"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_6ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:text='@{""+ viewModel.subTotal+ " JOD"}'
                    android:textColor="@color/white"
                    android:textSize="@dimen/_6ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="128.60 JOD" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:text='@{""+ viewModel.discount+ " JOD"}'
                    android:textColor="@color/white"
                    android:textSize="@dimen/_6ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="3 JOD" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bill_view"
                android:layout_width="0dp"
                android:layout_height="@dimen/_18sdp"
                android:layout_marginBottom="@dimen/_38sdp"
                android:background="@color/light_blue"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/pay"
                app:layout_constraintStart_toStartOf="@id/clear_cart">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:text="@string/total_bill"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:text='@{""+ viewModel.totalBill+ " JOD"}'
                    android:textColor="@color/white"
                    android:textSize="@dimen/_10ssp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="3 JOD" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/clear_cart"
                android:layout_width="0dp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_4sdp"
                android:background="@drawable/carve_red"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:onClick="@{()->viewModel.clearCart()}"
                android:text="@string/clear_cart"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/pay"
                app:layout_constraintHorizontal_weight="50"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/bill_view" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/pay"
                android:layout_width="0dp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:layout_marginBottom="@dimen/_4sdp"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginEnd="@dimen/_8sdp"
                android:background="@drawable/carve_blue"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:onClick="@{()->viewModel.clearCart()}"
                android:text="@string/pay"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="50"
                app:layout_constraintStart_toEndOf="@id/clear_cart"
                app:layout_constraintTop_toBottomOf="@id/bill_view"
                tools:ignore="UnusedAttribute" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
